Stop color code table overflowing out of the color code panel

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ body {
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
 		box-sizing: border-box;
+		overflow: auto;
 	}          
     
 /*style inner containers for filter panels*/
